solved flex layout issues

--- a/wmgoesng/src/app/app.component.css
+++ b/wmgoesng/src/app/app.component.css
@@ -1,44 +1,45 @@
 /* by [:host] selector we style the component tag itself */
 :host{
-    width: 100%;
     height: 100%;
+    margin: 0px;
+    width: 100%;
+    padding: 0px;
 }
 
 
 /* component elements */
 
 .rootbox{
-
-    width: 100%;
     height: 100%;
-
+    margin: 0px;
+    width: 100%;
+    padding: 0px;
 }
 
 .bodybox{
-
-    width: 100%;
     height: 100%;
+    margin: 0px;
+    width: 100%;
+    padding: 0px;
     display: flex;
     flex-direction: column;
 
 }
 
 .headbox{
-
-    height: 120px;
-
+    background-color: gray;
+    flex: 0 0 auto;
 }
 
 .contentbox{
-
-    flex-grow: 1;
-
+    flex: 1 1 auto;
+    position: relative;
+    overflow: auto;
 }
 
 .footbox{
-
-    height: 80px;
-
+    background-color: gray;
+    flex: 0 0 auto;
 }
 
 
@@ -53,14 +54,18 @@
 
 .contentnavbox{
 
-    height: 100%;
-    width: 170px;
+    /* height: 100%;
+    width: 170px; */
+    flex: 0 0 auto;
 
 }
 
 .contentareabox{
 
-    height: 100%;
-    flex-grow: 1;
+    /* height: 100%;
+    flex-grow: 1; */
+    flex: 1 1 auto;
+    position: relative;
+    overflow: auto;
 
 }
