--- a/wmgoesng/src/app/navigation/navigation.component.css
+++ b/wmgoesng/src/app/navigation/navigation.component.css
@@ -24,6 +24,7 @@
     align-items: center;
     justify-content: center;
     font-size: small;
+    width: 150px;
 
 
 }
