--- a/wmgoesng/src/styles.css
+++ b/wmgoesng/src/styles.css
@@ -2,4 +2,7 @@
 html, 
 body {
     height: 100%;
+    margin: 0px;
+    width: 100%;
+    padding: 0px;
 }
